--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -36,7 +36,7 @@
     justify-content: center;
     fill: #afb1b8;
 
-    max-width: 190px;
+    width: 190px;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
@@ -62,3 +62,49 @@
   margin-top: var(--card-set-gap);}
 
 }
+
+@media screen and (min-width: 1200px){
+
+.clients{
+
+}
+
+.clients__list {
+  display: flex;
+    flex-wrap: unset;
+    margin-left: 30px;
+}
+.clients__list > .clients__company {
+  flex-basis: unset;
+  margin-right: 30px;
+}
+
+.clients__title {
+  margin-bottom: 50px;
+}
+
+.clients__list > .clients__company:last-child {
+  margin-right: 0px;
+}
+
+.client__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #afb1b8;
+
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: background-color var(--duration-effect) var(--timing-function);
+}
+.client__link:hover,
+.client__link:focus {
+  fill: var(--accent-text-color);
+  border: 1px solid var(--accent-text-color);
+}
+
+.client__icon {
+  transition: fill var(--duration-effect) var(--timing-function);
+}}
