--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ img {
 @media screen and (min-width: 1200px) {
   .section {
     padding-bottom: 94px;
+    padding-top: 94px;
   }
 }
 
@@ -393,6 +394,10 @@ img {
 }
 
 /*LAYOUT*/
+.current {
+  color: var(--accent-text-color);
+}
+
 .header__container {
   display: flex;
   justify-content: space-between;
@@ -454,16 +459,13 @@ img {
     transition: color var(--duration-effect) var(--timing-function);
   }
   .site-contacts {
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
   }
   .site-contacts__icon {
     fill: currentColor;
     margin-right: 10px;
-  }
-  .site-contacts .site-contacts__item:not(:last-child) {
-    margin-right: 50px;
   }
   .site-contacts {
     margin-left: auto;
@@ -550,7 +552,7 @@ img {
 }
 
 .navigation-mobile__list:last-child {
-  margin-bottom: 302px;
+  margin-bottom: 32px;
 }
 
 .navigation-mobile__item {
@@ -608,6 +610,74 @@ img {
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    padding-bottom: 25px;
+    padding-top: 24px;
+  }
+  .logo__web {
+    color: var(--accent-text-color);
+  }
+  .navigation .current {
+    color: var(--accent-text-color);
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 0.86;
+    letter-spacing: 0.02em;
+  }
+  .navigation .list {
+    display: flex;
+    align-items: center;
+    margin-left: 93px;
+  }
+  .navigation .navigation__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .navigation__item_studio::after {
+    content: '';
+    display: block;
+    width: 48px;
+    height: 4px;
+    background-color: var(--accent-text-color);
+  }
+  .navigation__link {
+    display: inline-block;
+    padding-bottom: 32px;
+    padding-top: 32px;
+    color: var(--title-text-color);
+    transition: color var(--duration-effect) var(--timing-function);
+  }
+  .site-contacts {
+    display: flex;
+  }
+  .site-contacts__icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+  .site-contacts .site-contacts__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .site-contacts {
+    margin-left: auto;
+    flex-direction: unset;
+  }
+  .site-contacts__link {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 0.88;
+    letter-spacing: 0.02em;
+    transition: color var(--duration-effect) var(--timing-function);
+  }
 }
 
 .current {
@@ -675,16 +745,13 @@ img {
     transition: color var(--duration-effect) var(--timing-function);
   }
   .site-contacts {
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
   }
   .site-contacts__icon {
     fill: currentColor;
     margin-right: 10px;
-  }
-  .site-contacts .site-contacts__item:not(:last-child) {
-    margin-right: 50px;
   }
   .site-contacts {
     margin-left: auto;
@@ -771,7 +838,7 @@ img {
 }
 
 .navigation-mobile__list:last-child {
-  margin-bottom: 302px;
+  margin-bottom: 32px;
 }
 
 .navigation-mobile__item {
@@ -831,8 +898,72 @@ img {
   color: var(--accent-text-color);
 }
 
-.current {
-  color: var(--accent-text-color);
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    padding-bottom: 25px;
+    padding-top: 24px;
+  }
+  .logo__web {
+    color: var(--accent-text-color);
+  }
+  .navigation .current {
+    color: var(--accent-text-color);
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 0.86;
+    letter-spacing: 0.02em;
+  }
+  .navigation .list {
+    display: flex;
+    align-items: center;
+    margin-left: 93px;
+  }
+  .navigation .navigation__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .navigation__item_studio::after {
+    content: '';
+    display: block;
+    width: 48px;
+    height: 4px;
+    background-color: var(--accent-text-color);
+  }
+  .navigation__link {
+    display: inline-block;
+    padding-bottom: 32px;
+    padding-top: 32px;
+    color: var(--title-text-color);
+    transition: color var(--duration-effect) var(--timing-function);
+  }
+  .site-contacts {
+    display: flex;
+  }
+  .site-contacts__icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+  .site-contacts .site-contacts__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .site-contacts {
+    margin-left: auto;
+    flex-direction: unset;
+  }
+  .site-contacts__link {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 0.88;
+    letter-spacing: 0.02em;
+    transition: color var(--duration-effect) var(--timing-function);
+  }
 }
 
 .hero {
@@ -876,25 +1007,25 @@ img {
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: url("../images/hero/herotab@1x.jpg");
+    background-image: url("../images/hero/herotab1x.jpg");
   }
 }
 
 @media (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px), (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herotab@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herotab2x.jpg");
   }
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 768px) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 768px) and (min-width: 1200px) {
   .hero {
-    background-image: url("../images/hero/herodesc@1x.jpg");
+    background-image: url("../images/hero/herodes1x.jpg");
   }
 }
 
 @media (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 768px) and (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 768px) and (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 768px) and (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 768px) and (min-resolution: 192dpi) and (min-width: 1200px), (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-resolution: 2dppx) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 768px) and (min-resolution: 2dppx) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 768px) and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herodesc@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herodes2x.jpg");
   }
 }
 
@@ -964,6 +1095,53 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .skills {
+    padding-bottom: 0;
+  }
+  .skills__list {
+    display: flex;
+    flex-wrap: unset;
+  }
+  .skills__block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    width: 270px;
+    height: 120px;
+    border-radius: 4px;
+    background-color: var(--background-color);
+  }
+  .skills__icon {
+    width: 70px;
+    height: 70px;
+  }
+  .skills__list .skills__item {
+    padding-bottom: 0;
+  }
+  .skills__item {
+    width: 270px;
+  }
+  .skils__list .skills__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .skills__subtitle {
+    margin-bottom: 10px;
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+  }
+  .skills__text {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .specialization__list {
     display: none;
@@ -991,9 +1169,10 @@ img {
   }
   .specialization__text {
     position: absolute;
-    width: 100%;
-    font-size: 14px;
+    width: 370px;
+    height: 70px;
     font-weight: 700;
+    font-size: 14px;
     line-height: 1.14;
     text-align: center;
     text-transform: uppercase;
@@ -1067,6 +1246,77 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .team__list {
+    display: flex;
+    flex-wrap: unset;
+  }
+  .team__list .team__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .team__content {
+    padding: 30px 32px;
+  }
+  .team__title {
+    margin-bottom: 50px;
+  }
+  .title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+  }
+  .team__subtitle {
+    margin-bottom: 10px;
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+  }
+  .team__item {
+    flex-basis: unset;
+    background-color: var(--white-text-color);
+    width: 270px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .team__text {
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    margin-bottom: 16px;
+  }
+  .social {
+    display: flex;
+    justify-content: space-between;
+  }
+  .social__link {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    transition: background-color var(--duration-effect) var(--timing-function);
+  }
+  .social__link:focus,
+  .social__link:hover {
+    background-color: var(--accent-text-color);
+  }
+  .social__link:focus .social__icon,
+  .social__link:hover .social__icon {
+    fill: white;
+  }
+  .social__icon {
+    width: 20px;
+    height: 20px;
+    transition: fill var(--duration-effect) var(--timing-function);
+    fill: var(--primary-text-color);
+  }
+}
+
 .section-clients {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1096,7 +1346,7 @@ img {
   align-items: center;
   justify-content: center;
   fill: #afb1b8;
-  max-width: 190px;
+  width: 190px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -1117,6 +1367,43 @@ img {
     flex-basis: calc(100% / 3 - var(--card-set-gap));
     margin-left: var(--card-set-gap);
     margin-top: var(--card-set-gap);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    display: flex;
+    flex-wrap: unset;
+    margin-left: 30px;
+  }
+  .clients__list > .clients__company {
+    flex-basis: unset;
+    margin-right: 30px;
+  }
+  .clients__title {
+    margin-bottom: 50px;
+  }
+  .clients__list > .clients__company:last-child {
+    margin-right: 0px;
+  }
+  .client__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #afb1b8;
+    width: 170px;
+    height: 90px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    transition: background-color var(--duration-effect) var(--timing-function);
+  }
+  .client__link:hover,
+  .client__link:focus {
+    fill: var(--accent-text-color);
+    border: 1px solid var(--accent-text-color);
+  }
+  .client__icon {
+    transition: fill var(--duration-effect) var(--timing-function);
   }
 }
 
@@ -1254,6 +1541,122 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .site-footer {
+    justify-content: space-between;
+    text-align: unset;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: var(--footer-hero-background-color);
+  }
+  .site-footer__container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .adress {
+    margin-right: 70px;
+  }
+  .site-footer .logo {
+    padding: 0;
+  }
+  .studio-word {
+    color: var(--white-text-color);
+  }
+  .adress {
+    margin-top: 20px;
+    font-style: inherit;
+  }
+  .adress__item {
+    margin-bottom: 9px;
+  }
+  .adress__mapslink {
+    color: var(--white-text-color);
+    font-size: 14px;
+    line-height: 1.71;
+    transition: color var(--duration-effect) var(--timing-function);
+  }
+  .adress__link {
+    font-size: 14px;
+    line-height: 1.71;
+    color: rgba(255, 255, 255, 0.6);
+    transition: color var(--duration-effect) var(--timing-function);
+  }
+  .adress__item .footer {
+    padding: 0;
+    margin-bottom: 9px;
+  }
+  .adress__item:last-child {
+    margin-bottom: 0px;
+  }
+  .footer-social {
+    width: 206px;
+  }
+  .footer-social__subtitle {
+    display: inline-block;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--white-text-color);
+  }
+  .social__link_grey-bg {
+    transition: var(--duration-effect) var(--timing-function);
+    background: rgba(255, 255, 255, 0.1);
+  }
+  .social__icon_white {
+    fill: var(--white-text-color);
+  }
+  /*======FOOTER-FORM======*/
+  .footer-form {
+    width: 570px;
+    height: 86px;
+    margin-left: auto;
+  }
+  .footer-form__title {
+    display: block;
+    margin-bottom: 20px;
+    color: var(--white-text-color);
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+  }
+  .footer-form__form {
+    display: flex;
+  }
+  .footer-form__label:hover,
+  .footer-form__label:focus {
+    outline: none;
+    border-color: var(--accent-text-color);
+  }
+  .footer-form__input {
+    width: 358px;
+    height: 50px;
+    padding: 15px 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    color: rgba(255, 255, 255, 0.6);
+    background-color: #2f303a;
+    transition: drop-shadow var(--duration-effect) var(--timing-function), border-color var(--duration-effect) var(--timing-function);
+  }
+  .footer-form__button {
+    display: flex;
+    padding: 10px 28px 10px 29px;
+    margin-left: 12px;
+  }
+  .footer-form__button:hover,
+  .footer-form__button:focus {
+    background: #188ce8;
+    color: var(--white-text-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+  .footer-form__icon {
+    margin-left: 10px;
+    width: 24px;
+    height: 24px;
+  }
+}
+
 .portfolio-line::after {
   content: '';
   display: block;
@@ -1344,6 +1747,9 @@ img {
 }
 
 @media screen and (min-width: 768px) {
+  .filter__list {
+    justify-content: center;
+  }
   .card {
     display: flex;
     flex-wrap: wrap;
