--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -4,5 +4,6 @@
 }
 
 @media screen and (min-width: 1200px){
-  .section{padding-bottom: 94px;}
-}
+  .section{padding-bottom: 94px;
+  padding-top: 94px;
+}}
