--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -150,4 +150,149 @@
     width: 450px;
     margin: 0 auto;
   }
+
+  
 }
+
+
+@media screen and (min-width: 1200px){
+.site-footer {
+  justify-content: space-between;
+  text-align: unset;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  background-color: var(--footer-hero-background-color);
+}
+
+.site-footer__container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.adress {
+  margin-right: 70px;
+}
+
+.site-footer .logo {
+  padding: 0;
+}
+
+.studio-word {
+  color: var(--white-text-color);
+}
+
+.adress {
+  margin-top: 20px;
+  font-style: inherit;
+}
+
+.adress__item {
+  margin-bottom: 9px;
+}
+
+.adress__mapslink {
+  color: var(--white-text-color);
+  font-size: 14px;
+  line-height: 1.71;
+  transition: color var(--duration-effect) var(--timing-function);
+}
+
+.adress__link {
+  font-size: 14px;
+  line-height: 1.71;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color var(--duration-effect) var(--timing-function);
+}
+
+.adress__item .footer {
+  padding: 0;
+  margin-bottom: 9px;
+}
+.adress__item:last-child {
+  margin-bottom: 0px;
+}
+
+.footer-social {
+  width: 206px;
+}
+
+.footer-social__subtitle {
+  display: inline-block;
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+
+  color: var(--white-text-color);
+}
+
+.social__link_grey-bg {
+  transition: var(--duration-effect) var(--timing-function);
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.social__icon_white {
+  fill: var(--white-text-color);
+}
+
+/*======FOOTER-FORM======*/
+
+.footer-form {
+  width: 570px;
+  height: 86px;
+  margin-left: auto;
+}
+
+.footer-form__title {
+  display: block;
+  margin-bottom: 20px;
+  color: var(--white-text-color);
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.footer-form__form {
+  display: flex;
+}
+
+.footer-form__label:hover,
+.footer-form__label:focus {
+  outline: none;
+  border-color: var(--accent-text-color);
+}
+
+.footer-form__input {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: #2f303a;
+  transition: drop-shadow var(--duration-effect) var(--timing-function),
+    border-color var(--duration-effect) var(--timing-function);
+}
+
+.footer-form__button {
+  display: flex;
+  padding: 10px 28px 10px 29px;
+  margin-left: 12px;
+}
+
+.footer-form__button:hover,
+.footer-form__button:focus {
+  background: #188ce8;
+  color: var(--white-text-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.footer-form__icon {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+}}
