--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,8 @@
+.current {
+  color: var(--accent-text-color);
+}
+
+
 .header__container {
   display: flex;
   justify-content: space-between;
@@ -71,7 +76,7 @@
 }
 
 .site-contacts {
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
 }
@@ -79,15 +84,6 @@
 .site-contacts__icon {
   fill: currentColor;
   margin-right: 10px;
-}
-
-// .site-contacts__item {
-//   padding-bottom: 32px;
-//   padding-top: 32px;
-// }
-
-.site-contacts .site-contacts__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .site-contacts {
@@ -124,6 +120,10 @@
 
   }
 }
+
+
+
+
 
 @media screen and (min-width: 767px){
   .burger-btn{
@@ -180,7 +180,7 @@
 }
 
 .navigation-mobile__list:last-child {
-  margin-bottom: 302px;
+  margin-bottom: 32px;
 }
 
 .navigation-mobile__item {
@@ -243,22 +243,82 @@
 
 
 
+@media screen and (min-width: 1200px){
 
-
-
-.current {
-  color: var(--accent-text-color);
+  .header__logo {
+    padding-bottom: 25px;
+    padding-top: 24px;
+  }
+  
+  .logo__web {
+    color: var(--accent-text-color);
+  }
+  
+  .navigation .current {
+    color: var(--accent-text-color);
+  }
+  
+  .navigation {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 0.86;
+    letter-spacing: 0.02em;
+  }
+  
+  .navigation .list {
+    display: flex;
+    align-items: center;
+    margin-left: 93px;
+  }
+  
+  .navigation .navigation__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  
+  .navigation__item_studio::after {
+    content: '';
+    display: block;
+    width: 48px;
+    height: 4px;
+    background-color: var(--accent-text-color);
+  }
+  
+  .navigation__link {
+    display: inline-block;
+    padding-bottom: 32px;
+    padding-top: 32px;
+    color: var(--title-text-color);
+    transition: color var(--duration-effect) var(--timing-function);
+  }
+  
+  .site-contacts {
+    display: flex;
+  }
+  
+  .site-contacts__icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+  
+  .site-contacts .site-contacts__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  
+  .site-contacts {
+    margin-left: auto;
+    flex-direction: unset;
+  }
+  .site-contacts__link {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 0.88;
+    letter-spacing: 0.02em;
+    transition: color var(--duration-effect) var(--timing-function);
+  }
 }
-
-
-
-// @media screen and (min-width: 768px){
-//   .header__link {
-//     display: inline-block;
-//     padding-bottom: 32px;
-//     padding-top: 32px;
-//     color: var(--title-text-color);
-//     transition: color var(--duration-effect) var(--timing-function);
-//   }}
-
-
