--- a/sass/layout/_specialization.scss
+++ b/sass/layout/_specialization.scss
@@ -15,39 +15,39 @@
 
 
 @media screen and (min-width: 1200px){
-.specialization {
-  &__list {
-    display: flex;
-  }
 
-  &__list &__item:not(:last-child) {
-    margin-right: 30px;
-  }
-
-  &__title {
-    margin-bottom: 50px;
-  }
-
-  &__thumb {
-    position: relative;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-  }
-
-  &__text {
-    position: absolute;
-    width: 100%;
-    @include font($fw: 700, $lh: 1.14);
-    text-align: center;
-    text-transform: uppercase;
-    color: var(--white-text-color);
-    background-color: rgba(47, 48, 58, 0.8);
-  }
-
-  &__sub {
-    padding-top: 27px;
-  }
+.specialization__list {
+  display: flex;
 }
 
+.specialization__list .specialization__item:not(:last-child) {
+  margin-right: 30px;
 }
+
+.specialization__title {
+  margin-bottom: 50px;
+}
+
+.specialization__thumb {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.specialization__text {
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--white-text-color);
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.specialization__sub {
+  padding-top: 27px;
+}}
