--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -66,3 +66,93 @@
   margin-bottom: 0;}
 
 }
+
+
+@media screen and (min-width: 1200px){
+
+  .team {
+  
+  }
+  
+  .team__list {
+    display: flex;
+    flex-wrap: unset;
+  }
+  
+  .team__list .team__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  
+  .team__content {
+    padding: 30px 32px;
+  }
+  
+  .team__title {
+    margin-bottom: 50px;
+  }
+  .title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+  }
+  
+  .team__subtitle {
+    margin-bottom: 10px;
+  
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+  }
+  
+  .team__item {
+    flex-basis: unset;
+    background-color: var(--white-text-color);
+    width: 270px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  
+  .team__text {
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    margin-bottom: 16px;
+  }
+  .social {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .social__link {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    transition: background-color var(--duration-effect) var(--timing-function);
+  }
+  
+  .social__link:focus,
+  .social__link:hover {
+    background-color: var(--accent-text-color);
+  }
+  
+  .social__link:focus .social__icon,
+  .social__link:hover .social__icon {
+    fill: white;
+  }
+  
+  .social__icon {
+    width: 20px;
+    height: 20px;
+    transition: fill var(--duration-effect) var(--timing-function);
+    fill: var(--primary-text-color);
+  }
+  
+}
