--- a/sass/layout/_specialization.scss
+++ b/sass/layout/_specialization.scss
@@ -1,15 +1,10 @@
 
 @media screen and (max-width: 1199px){
 .specialization {
-  &__list {
-  
-    display: none;
+display: none;
+
   }
-
-  &__title {
-    display: none;
-
-}}}
+}
 
 
 
