--- a/sass/componets/_modal-form.scss
+++ b/sass/componets/_modal-form.scss
@@ -1,8 +1,7 @@
 .modal {
+  max-width: 450px;
   position: absolute;
   padding: 40px;
-  width: 528px;
-  height: 581px;
   background-color: var(--white-text-color);
   left: 50%;
   top: 50%;
@@ -189,4 +188,8 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
+
+  
 }
+
+
