--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,9 +6,6 @@
 
   background-color: var(--footer-hero-background-color);
 
-  &__container {
-    // display: flex;
-  }
   & .logo {
     padding: 0;
   }
@@ -28,9 +25,7 @@
 }
 
 .adress {
-  // margin-top: 20px;
   font-style: inherit;
-  // margin-right: 70px;
   margin-bottom: 60px;
 
 
@@ -38,9 +33,6 @@
     margin-bottom: 8px;
   }
 
-  &:last-child {
-    margin-bottom: 60px;
-  }
 
   &__mapslink {
     color: var(--white-text-color);
@@ -67,7 +59,6 @@
 
 .footer-social {
   display: block;
-  // width: 206px;
   margin-bottom: 60px;
 
   &__subtitle {
@@ -78,6 +69,10 @@
 
     color: var(--white-text-color);
   }
+}
+
+.social__item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .footer-form {
@@ -91,10 +86,6 @@
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
-  }
-
-  &__form {
-    // display: flex;
   }
 
   &__label:hover,
@@ -137,21 +128,18 @@
   }
 }
 
-@media screen and (min-width: 768px)
 
-{
+
+@media screen and (min-width: 768px){
   .site-footer__container{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;}
 
-
   .footer-form{
     width: 450px;
     margin: 0 auto;
-  }
-
-  
+  } 
 }
 
 
@@ -168,10 +156,12 @@
 .site-footer__container {
   display: flex;
   justify-content: space-around;
+  align-items: baseline;
 }
 
-.adress {
-  margin-right: 70px;
+
+.adress-block{
+margin-right: 70px;
 }
 
 .site-footer .logo {
@@ -180,11 +170,6 @@
 
 .studio-word {
   color: var(--white-text-color);
-}
-
-.adress {
-  margin-top: 20px;
-  font-style: inherit;
 }
 
 .adress__item {
@@ -214,7 +199,7 @@
 }
 
 .footer-social {
-  width: 206px;
+ margin-bottom: 0;
 }
 
 .footer-social__subtitle {
@@ -238,23 +223,6 @@
   fill: var(--white-text-color);
 }
 
-/*======FOOTER-FORM======*/
-
-.footer-form {
-  width: 570px;
-  height: 86px;
-  margin-left: auto;
-}
-
-.footer-form__title {
-  display: block;
-  margin-bottom: 20px;
-  color: var(--white-text-color);
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-}
-
 .footer-form__form {
   display: flex;
 }
@@ -266,33 +234,10 @@
 }
 
 .footer-form__input {
+  margin-bottom: 0;
   width: 358px;
   height: 50px;
   padding: 15px 16px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  color: rgba(255, 255, 255, 0.6);
-  background-color: #2f303a;
-  transition: drop-shadow var(--duration-effect) var(--timing-function),
-    border-color var(--duration-effect) var(--timing-function);
 }
 
-.footer-form__button {
-  display: flex;
-  padding: 10px 28px 10px 29px;
-  margin-left: 12px;
 }
-
-.footer-form__button:hover,
-.footer-form__button:focus {
-  background: #188ce8;
-  color: var(--white-text-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.footer-form__icon {
-  margin-left: 10px;
-  width: 24px;
-  height: 24px;
-}}
