--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,3 @@
-.current {
-  color: var(--accent-text-color);
-}
-
-
 .header__container {
   display: flex;
   justify-content: space-between;
@@ -12,8 +7,6 @@
 }
 
 .header {
-  // padding-top: 16px;
-  // padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
 }
 
@@ -79,6 +72,7 @@
   display: block;
   flex-direction: column;
   align-items: center;
+  margin-left: auto;
 }
 
 .site-contacts__icon {
@@ -86,9 +80,6 @@
   margin-right: 10px;
 }
 
-.site-contacts {
-  margin-left: auto;
-}
 .site-contacts__link {
   margin-bottom: 10px;
   display: flex;
@@ -124,6 +115,10 @@
 
 
 
+.mobile-menu__list-social {
+flex-wrap: wrap;
+}
+
 
 @media screen and (min-width: 767px){
   .burger-btn{
@@ -139,7 +134,6 @@
   height: 100vh;
   background-color: var(--white-text-color);
   z-index: 100;
-  border: solid tomato 1px;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -159,28 +153,41 @@
   border: none;
   line-height: 0;
   cursor: pointer;
+  transition: fill var(--duration-effect) var(--timing-function);
 }
+
+.mobile-menu__close-btn:hover,
+.mobile-menu__close-btn:focus{
+  fill:var(--accent-text-color)
+}
+
 
 .mobile-menu__close-icon {
   width: 40px;
   height: 40px;
 }
+
+
 .close-btn {
   position: absolute;
   top: 10px;
   right: 15px;
 }
 
+
 .mobile-menu__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
-  min-height: 200px;
+  height: 100%;
   padding-top: 48px;
   padding-left: 40px;
   padding-bottom: 48px;
 }
 
 .navigation-mobile__list:last-child {
-  margin-bottom: 32px;
+  margin-bottom: 0px;
 }
 
 .navigation-mobile__item {
@@ -194,7 +201,13 @@
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+  transition: color var(--duration-effect) var(--timing-function);
 }
+
+.current {
+  color: var(--accent-text-color);
+}
+
 
 .site-contacts-mobile__item-tel {
   margin-bottom: 32px;
@@ -208,16 +221,22 @@
   color: var(--accent-text-color);
 }
 
+.mobile-menu__item-social:not(:last-child){
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+padding-right: 10px;
+}
+
 .site-contacts-mobile__item-post {
   margin-bottom: 64px;
 }
 
 .site-contacts-mobile__link-post {
+  
   font-weight: 500;
   font-size: 24px;
   line-height: 1.67;
   letter-spacing: 0.02em;
-
+  transition: color var(--duration-effect) var(--timing-function);
   color: var(--primary-text-color);
 }
 
@@ -225,12 +244,9 @@
   display: flex;
 }
 
-.mobile-menu__list-social:last-child {
-  margin-right: 0;
-}
 
-.mobile-menu__item-social {
-  margin-right: 20px;
+.mobile-menu__item-social:not(:last-child) {
+  margin-right: 10px;
 }
 
 .mobile-menu__link-social {
@@ -239,6 +255,11 @@
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-text-color);
+}
+
+.social-after {
+  position: relative;
+  display: block;
 }
 
 
@@ -250,56 +271,13 @@
     padding-top: 24px;
   }
   
-  .logo__web {
-    color: var(--accent-text-color);
-  }
   
   .navigation .current {
     color: var(--accent-text-color);
   }
   
-  .navigation {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 0.86;
-    letter-spacing: 0.02em;
-  }
-  
-  .navigation .list {
-    display: flex;
-    align-items: center;
-    margin-left: 93px;
-  }
-  
-  .navigation .navigation__item:not(:last-child) {
-    margin-right: 50px;
-  }
-  
-  .navigation__item_studio::after {
-    content: '';
-    display: block;
-    width: 48px;
-    height: 4px;
-    background-color: var(--accent-text-color);
-  }
-  
-  .navigation__link {
-    display: inline-block;
-    padding-bottom: 32px;
-    padding-top: 32px;
-    color: var(--title-text-color);
-    transition: color var(--duration-effect) var(--timing-function);
-  }
-  
   .site-contacts {
     display: flex;
-  }
-  
-  .site-contacts__icon {
-    fill: currentColor;
-    margin-right: 10px;
   }
   
   .site-contacts .site-contacts__item:not(:last-child) {
@@ -312,13 +290,6 @@
   }
   .site-contacts__link {
     margin-bottom: 0;
-    display: flex;
-    align-items: center;
-    color: var(--primary-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 0.88;
-    letter-spacing: 0.02em;
-    transition: color var(--duration-effect) var(--timing-function);
   }
 }
+
