--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,8 +3,8 @@
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero/heromob@1x.jpg');
   background-size: cover;
-  padding-top: 118px;
-  padding-bottom: 118px;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,11 +20,23 @@
     text-align: center;
 
     color: var(--white-text-color);
-    @include font($fs: 26px, $fw: 900, $lh: 1.62);
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.62;
+    letter-spacing: 0.06em;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
   }
+
+
+  @media screen and (min-width: 1200px){
+    &__title{
+      font-weight: 900;
+    font-size: 44px;
+    line-height: 1.3;
+    letter-spacing: 0.06em;
+    }}
 
   &__alight {
     margin-left: auto;
@@ -33,7 +45,8 @@
     text-align: center;
   }
 
-  @media (min-device-pixel-ratio: 2) and (min-width: 280px),
+  
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 280px),
     (min-resolution: 192dpi) and (min-width: 280px),
     (min-resolution: 2dppx) and (min-width: 280px) {
     & {
@@ -44,7 +57,7 @@
 
   @media screen and (min-width: 768px) {
     & {
-      background-image: url('../images/hero/herotab1x.jpg');
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/hero/herotab1x.jpg');
     }
   }
 
@@ -69,6 +82,9 @@
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
           url('../images/hero/herodes2x.jpg');
       }
+    
     }
   }
 }
+
+
