--- a/sass/layout/_portfolio-card-set.scss
+++ b/sass/layout/_portfolio-card-set.scss
@@ -21,24 +21,13 @@
     transition: color var(--duration-effect) var(--timing-function),
       box-shadow var(--duration-effect) var(--timing-function),
       background-color var(--duration-effect) var(--timing-function);
-
-    &:hover,
-    &:focus {
-      color: var(--white-text-color);
-      background-color: var(--accent-text-color);
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
   }
 
   &__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin-top: 60px;
-    margin-bottom: 40px;
-    // justify-content: center;
-    // margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   &__list > &__item:not(:last-child) {
@@ -49,11 +38,27 @@
     margin-bottom: 15px;
   }
 
-  &__item:hover,
-  &__item:focus {
+  &__btn:hover,
+  &__btn:focus {
+    background-color: var(--accent-text-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+
+  @media screen and (min-width: 768px){
+
+    &__list{
+      justify-content: center;
+    }
+  }
+
+  @media screen and (min-width: 1200px)
+{
+&__list{
+  margin-bottom: 50px;
+}
+}
+
 }
 
 .card {
@@ -66,6 +71,7 @@
 
   &__item {
     margin-bottom: 30px;
+    display: flex;
   }
 
   &__item:last-child {
@@ -73,7 +79,8 @@
   }
 
   &__link {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     transition: box-shadow var(--duration-effect) var(--timing-function);
   }
 
@@ -84,6 +91,7 @@
   &__content {
     border: 1px solid #eeeeee;
     padding: 20px 24px;
+    flex-grow: 1;
   }
 
   &__title {
@@ -97,39 +105,40 @@
     line-height: 1.88;
     color: var(--primary-text-color);
   }
-}
 
-@media screen and (min-width: 768px){
+  @media screen and (min-width: 768px){
 
-.filter__list{
-  justify-content: center;
-}
-
-.card {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));}
-
-.card > .card__item {
-    flex-basis: calc(100% / 2 - var(--card-set-gap));
-    margin-left: var(--card-set-gap);
-    margin-top: var(--card-set-gap);}
-
-.card__item
-{margin-bottom: 0;}
-  }
-
-
-
-@media screen and (min-width: 1200px){
-    .card {
+  & {
       display: flex;
       flex-wrap: wrap;
       margin-top: calc(-1 * var(--card-set-gap));
       margin-left: calc(-1 * var(--card-set-gap));}
     
-      .card > .card__item {
-        flex-basis: calc(100% / 3 - var(--card-set-gap));
+    & > &__item {
+        flex-basis: calc(100% / 2 - var(--card-set-gap));
         margin-left: var(--card-set-gap);
-        margin-top: var(--card-set-gap);}}
+        margin-top: var(--card-set-gap);}
+    
+    &__item
+    {margin-bottom: 0;}
+    
+    }
+    
+    @media screen and (min-width: 1200px){
+    & {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));}
+      
+    & > &__item {
+    flex-basis: calc(100% / 3 - var(--card-set-gap));
+    margin-left: var(--card-set-gap);
+    margin-top: var(--card-set-gap);}}
+
+}
+
+
+
+
+
