--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,18 +1,9 @@
 .team {
   background-color: #f5f4fa;
-  width: 100%;
-
-  // &__list {
-  //   display: flex;
-  // }
 
   &__list:last-child {
     margin-bottom: 0;
   }
-
-  // &__list &__item:not(:last-child) {
-  //   margin-right: 30px;
-  // }
 
   &__content {
     padding: 30px 32px;
@@ -43,78 +34,54 @@
     text-align: center;
     margin-bottom: 16px;
   }
+
   &__img {
     width: 100%;
+  } 
+
+  @media screen and (min-width: 768px){
+
+  &__list{
+  
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
   }
-}
-
-
-@media screen and (min-width: 768px){
-  .team__list{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));
-}
-
-.team__item{  
-  flex-basis: calc(100% / 2 - var(--card-set-gap));
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
-  margin-bottom: 0;}
+  
+  &__item{  
+    flex-basis: calc(100% / 2 - var(--card-set-gap));
+    margin-left: var(--card-set-gap);
+    margin-top: var(--card-set-gap);
+    margin-bottom: 0;}
+  
+  }
 
 }
-
 
 @media screen and (min-width: 1200px){
 
-  .team {
-  
-  }
-  
   .team__list {
-    display: flex;
     flex-wrap: unset;
+
   }
   
   .team__list .team__item:not(:last-child) {
     margin-right: 30px;
   }
   
-  .team__content {
-    padding: 30px 32px;
-  }
-  
   .team__title {
     margin-bottom: 50px;
   }
-  .title {
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-  }
-  
-  .team__subtitle {
-    margin-bottom: 10px;
-  
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-  }
+
   
   .team__item {
     flex-basis: unset;
-    background-color: var(--white-text-color);
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     width: 270px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+ 
   }
   
   .team__text {
@@ -123,12 +90,14 @@
     text-align: center;
     margin-bottom: 16px;
   }
-  .social {
+
+
+  .social{ 
     display: flex;
     justify-content: space-between;
-  }
   
-  .social__link {
+  
+  &__link {
     display: flex;
     width: 40px;
     height: 40px;
@@ -138,21 +107,22 @@
     transition: background-color var(--duration-effect) var(--timing-function);
   }
   
-  .social__link:focus,
-  .social__link:hover {
+  &__link:focus,
+  &__link:hover {
     background-color: var(--accent-text-color);
   }
   
-  .social__link:focus .social__icon,
-  .social__link:hover .social__icon {
+  &__link:focus &__icon,
+  &__link:hover &__icon {
     fill: white;
   }
   
-  .social__icon {
+  &__icon {
     width: 20px;
     height: 20px;
     transition: fill var(--duration-effect) var(--timing-function);
     fill: var(--primary-text-color);
   }
+}
   
 }
