--- a/css/main.css
+++ b/css/main.css
@@ -477,8 +477,10 @@ img {
     fill: currentColor;
     margin-right: 10px;
   }
-  .site-contacts__link {
+  .site-contacts__item:not(:last-child) {
     margin-bottom: 10px;
+  }
+  .site-contacts__link {
     display: flex;
     align-items: center;
     color: var(--primary-text-color);
@@ -508,7 +510,7 @@ img {
   flex-wrap: wrap;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .burger-btn {
     display: none;
   }
@@ -653,15 +655,13 @@ img {
   }
   .site-contacts {
     display: flex;
+    margin-left: auto;
+    flex-direction: unset;
   }
   .site-contacts .site-contacts__item:not(:last-child) {
     margin-right: 50px;
   }
-  .site-contacts {
-    margin-left: auto;
-    flex-direction: unset;
-  }
-  .site-contacts__link {
+  .site-contacts__item:not(:last-child) {
     margin-bottom: 0;
   }
 }
@@ -736,8 +736,10 @@ img {
     fill: currentColor;
     margin-right: 10px;
   }
-  .site-contacts__link {
+  .site-contacts__item:not(:last-child) {
     margin-bottom: 10px;
+  }
+  .site-contacts__link {
     display: flex;
     align-items: center;
     color: var(--primary-text-color);
@@ -767,7 +769,7 @@ img {
   flex-wrap: wrap;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .burger-btn {
     display: none;
   }
@@ -912,15 +914,13 @@ img {
   }
   .site-contacts {
     display: flex;
+    margin-left: auto;
+    flex-direction: unset;
   }
   .site-contacts .site-contacts__item:not(:last-child) {
     margin-right: 50px;
   }
-  .site-contacts {
-    margin-left: auto;
-    flex-direction: unset;
-  }
-  .site-contacts__link {
+  .site-contacts__item:not(:last-child) {
     margin-bottom: 0;
   }
 }
@@ -974,25 +974,25 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) and (max-width: 768px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herotab1x.jpg");
   }
 }
 
-@media (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px), (min-resolution: 2dppx) and (min-width: 768px) {
+@media (min-device-pixel-ratio: 2) and (min-width: 480px) and (max-width: 768px), (min-resolution: 192dpi) and (min-width: 480px) and (max-width: 768px), (min-resolution: 2dppx) and (min-width: 480px) and (max-width: 768px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herotab2x.jpg");
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 768px) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 768px) and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1600px) {
   .hero {
-    background-image: url("../images/hero/herodes1x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herodes1x.jpg");
   }
 }
 
-@media (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 768px) and (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 768px) and (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 768px) and (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 768px) and (min-resolution: 192dpi) and (min-width: 1200px), (min-device-pixel-ratio: 2) and (min-width: 768px) and (min-resolution: 2dppx) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 768px) and (min-resolution: 2dppx) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 768px) and (min-resolution: 2dppx) and (min-width: 1200px) {
+@media (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1600px), (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1600px), (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1600px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herodes2x.jpg");
   }
@@ -1006,7 +1006,7 @@ img {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
-  width: 100%;
+  height: 120px;
   border-radius: 4px;
   background-color: var(--background-color);
 }
@@ -1069,6 +1069,8 @@ img {
   }
   .skills__list {
     flex-wrap: unset;
+    margin-top: 0;
+    margin-left: 0;
   }
   .skills__block {
     align-items: center;
@@ -1078,6 +1080,8 @@ img {
   }
   .skills__item {
     width: 270px;
+    margin-top: 0;
+    margin-left: 0;
   }
   .skills__list .skills__item:not(:last-child) {
     margin-right: 30px;
@@ -1185,6 +1189,8 @@ img {
 @media screen and (min-width: 1200px) {
   .team__list {
     flex-wrap: unset;
+    margin-top: 0;
+    margin-left: 0;
   }
   .team__list .team__item:not(:last-child) {
     margin-right: 30px;
@@ -1276,6 +1282,12 @@ img {
   transition: fill var(--duration-effect) var(--timing-function);
 }
 
+@media screen and (min-width: 768px) {
+  .clients__company {
+    flex-basis: calc(100% / 3 - var(--card-set-gap));
+  }
+}
+
 @media screen and (min-width: 1199px) {
   .clients__list > .clients__company {
     flex-basis: calc(100% / 6 - var(--card-set-gap));
@@ -1316,11 +1328,11 @@ img {
 .adress-block {
   display: inline-flex;
   flex-direction: column;
+  margin-bottom: 60px;
 }
 
 .adress {
   font-style: inherit;
-  margin-bottom: 60px;
 }
 
 .adress__item {
@@ -1370,7 +1382,6 @@ img {
 }
 
 .footer-form {
-  width: 100%;
   margin-left: auto;
 }
 
@@ -1390,7 +1401,7 @@ img {
 
 .footer-form__input {
   margin-bottom: 20px;
-  width: 100%;
+  width: 450px;
   height: 50px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1422,6 +1433,7 @@ img {
   .site-footer__container {
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
     justify-content: space-around;
   }
   .footer-form {
@@ -1440,11 +1452,12 @@ img {
   }
   .site-footer__container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: baseline;
   }
   .adress-block {
     margin-right: 70px;
+    margin-bottom: 0;
   }
   .site-footer .logo {
     padding: 0;
@@ -1507,6 +1520,9 @@ img {
     height: 50px;
     padding: 15px 16px;
   }
+  .footer-form {
+    margin-left: auto;
+  }
 }
 
 .portfolio-line::after {
@@ -1543,7 +1559,7 @@ img {
   margin-right: 8px;
 }
 
-.filter .filter__list > .filter__item:nth-child(-n + 3) {
+.filter__list > .filter__item:nth-child(-n + 3) {
   margin-bottom: 15px;
 }
 
@@ -1555,6 +1571,9 @@ img {
 @media screen and (min-width: 768px) {
   .filter__list {
     justify-content: center;
+  }
+  .filter__list > .filter__item:nth-child(-n + 3) {
+    margin-bottom: 0;
   }
 }
 
