--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -55,36 +55,37 @@
     }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 480px) and (max-width: 768px) {
     & {
-      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/hero/herotab1x.jpg');
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+       url('../images/hero/herotab1x.jpg');
     }
   }
 
-  @media (min-device-pixel-ratio: 2) and (min-width: 768px),
-    (min-resolution: 192dpi) and (min-width: 768px),
-    (min-resolution: 2dppx) and (min-width: 768px) {
+ 
+ 
+  @media (min-device-pixel-ratio: 2)  and (min-width: 480px) and (max-width: 768px),
+    (min-resolution: 192dpi)  and (min-width: 480px) and (max-width: 768px),
+    (min-resolution: 2dppx)  and (min-width: 480px) and (max-width: 768px) {
     & {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url('../images/hero/herotab2x.jpg');
-    }
+    }}
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 768px) and (max-width: 1600px) {
       & {
-        background-image: url('../images/hero/herodes1x.jpg');
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/hero/herodes1x.jpg');
       }
     }
 
-    @media (min-device-pixel-ratio: 2) and (min-width: 1200px),
-      (min-resolution: 192dpi) and (min-width: 1200px),
-      (min-resolution: 2dppx) and (min-width: 1200px) {
+    @media (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1600px),
+      (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1600px),
+      (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1600px) {
       & {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
           url('../images/hero/herodes2x.jpg');
-      }
+      }}
     
-    }
-  }
-}
+      }
 
 
