--- a/sass/layout/_portfolio-card-set.scss
+++ b/sass/layout/_portfolio-card-set.scss
@@ -34,7 +34,7 @@
     margin-right: 8px;
   }
 
-  .filter__list > .filter__item:nth-child(-n + 3) {
+ &__list >&__item:nth-child(-n + 3) {
     margin-bottom: 15px;
   }
 
@@ -49,6 +49,10 @@
 
     &__list{
       justify-content: center;
+    }
+
+    &__list > &__item:nth-child(-n + 3) {
+      margin-bottom:0;
     }
   }
 
