--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
-    width: 100%;
+    height: 120px;
 
     border-radius: 4px;
     background-color: var(--background-color);
@@ -69,6 +69,8 @@
     
     &__list {
       flex-wrap: unset;
+      margin-top: 0;
+      margin-left: 0;
     }
     
     &__block {
@@ -81,6 +83,8 @@
     
     &__item {
       width: 270px;
+      margin-top: 0;
+      margin-left: 0;
     }
     
     &__list &__item:not(:last-child) {
